migrate to view pager 2

--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -122,9 +122,9 @@
             android:exported="true" />
         <!-- Mention the receiever name here -->
 
-        <receiver
-            android:name=".receiver.ScreenStateReceiver"
-            tools:ignore="Instantiatable" />
+<!--        <receiver-->
+<!--            android:name=".receiver.ScreenStateReceiver"-->
+<!--            tools:ignore="Instantiatable" />-->
 
         <receiver
             android:name=".receiver.NetworkChangeReceiver$NetworkChangeBroadcastReceiver"
