--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -50,14 +50,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation project(":surveyandroid")
-    implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     // ESM survey 兩個會衝突!!!??
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.4.0'
     //viewpage indicator
     implementation 'androidx.preference:preference:1.1.1'
     // TODO: Review play services library required for activity recognition.
